--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <img style="height: 45px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
         </a>
         <a target="_blank" href="https://ieeenitjsr.netlify.app/">
-          <img style="height: 45px;" src="images/ieeesys.png" alt="logo" class="mb-1 mx-auto img-fluid" width="200" height="55">
+          <img style="height: 45px;" src="images/nitiee.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="55">
         </a>
         <!-- <a href="index.html">
           <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
@@ -149,7 +149,6 @@
             <li class="nav-item text-capitalize text-center">
               <a href="generalchair.html" class="nav-link mx-1">General Chair</a>
             </li>
-            
             <li class="nav-item dropdown text-white">
               <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Authors</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
@@ -161,8 +160,6 @@
                 <li><a href="confprogram.html" class="dropdown-item">Conference Program</a></li>
                 </ul>
             </li>
-
-            
             <li class="nav-item text-capitalize text-center">
               <a href="keynotespeakers.html" class="nav-link mx-1">Speakers</a>
             </li>
@@ -170,14 +167,11 @@
             <li class="nav-item dropdown text-white">
               <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Committee</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
-                <li><a href="callforpapers.html" class="dropdown-item">International Advisory Committee</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Organizing Committee</a></li>
-                <li><a href="crucialdates.html" class="dropdown-item">Technical Program Committee</a></li>
+                <li><a href="internationaladvisory.html" class="dropdown-item">International Advisory Committee</a></li>
+                <li><a href="organizingcommittee.html" class="dropdown-item">Organizing Committee</a></li>
+                <li><a href="technicalprogramcommittee.html" class="dropdown-item">Technical Program Committee</a></li>
                </ul>
             </li>
-
-
-
 
             <li class="nav-item text-light">
               <a href="sponsorship.html" class="nav-link mx-1">Sponsors</a>
