--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="utf-8">
+    <title>International Advisory Committee</title>
+     <meta charset="utf-8">
   <link rel="icon" href="images/logo1.png" type="image/x-icon">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>General Chair</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="author" content="">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+  </head>
+  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-
+  
   <link rel="stylesheet" type="text/css" href="icomoon/icomoon.css">
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -20,8 +28,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;600;700&family=Roboto+Slab&display=swap"
     rel="stylesheet">
   
+
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  </head>
 <body class="bg-gray-100 text-gray-800">
   <!-- Header -->
   <nav class="main-menu d-flex navbar fixed-top navbar-expand-lg p-2 py-3 p-lg-4 py-lg-4 mx-auto">
@@ -45,7 +54,6 @@
         </a>
       </div>
     </div>
-
 
     <div class="container-fluid">
       <div class="main-logo">
@@ -91,7 +99,6 @@
                 <li><a href="crucialdates.html" class="dropdown-item">Technical Program Committee</a></li>
                </ul>
             </li>
-
             <li class="nav-item text-light">
               <a href="sponsorship.html" class="nav-link mx-1">Sponsors</a>
             </li>
@@ -116,46 +123,46 @@
       </div>
     </div>
   </nav>
-
-
-
-  <main class="container mx-auto p-12">
-    <h1 class="text-3xl font-bold mb-4 mt-40"> General Chair's Message</h1>
-    <p class="text-gray-600 mt-6"> Dear Esteemed Colleagues,</p>
-    <p class="text-gray-600 text-justify mt-6"> On behalf of the organizing committee, it gives me immense pleasure to welcome you to the 1st IEEE International Conference on Electrical, Electronics, and Computer Science with Advanced Power Technologies (ICE2CPT2025), to be held from October 29–31, 2025, at the National Institute of Technology, Jamshedpur, India.
-    </p>
-    <p class="text-gray-600 text-justify mt-6">This inaugural conference is poised to serve as a premier platform for global researchers, academicians, industry experts, and students to exchange knowledge, foster collaborations, and explore cutting-edge advancements in electrical engineering, electronics, computer science, and advanced power technologies. With the growing importance of sustainable and transformative technologies in addressing global challenges, ICE2CPT2025 aims to spotlight innovative solutions and drive impactful discussions.
-    </p>
-    <p class="text-gray-600 text-justify mt-6">The conference program includes keynote speeches by renowned experts, technical sessions showcasing pioneering research, tutorials, and panel discussions that promise to enrich the participants' experience and stimulate insightful dialogue. We are confident that this event will create opportunities to forge new connections and inspire future innovations that contribute to a sustainable and technologically advanced world.
-    </p>
-    <p class="text-gray-600 text-justify mt-6">As we embark on this exciting journey, we invite you to be a part of this landmark event, sharing your expertise, ideas, and experiences. Your participation will be integral to the success of ICE2CPT2025, and we look forward to your valuable contributions to the discussions and activities.
-    </p>
-    <p class="text-gray-600 text-justify mt-6"> On behalf of the organizing team, I warmly invite you to join us in Jamshedpur, India, this October. We hope to see you soon in Jamshedpur!
-    </p>
-    <p class="text-gray-600 mt-6">Warm regards, </p>
-
-    <h1 class="text-1xl font-bold mb-2 mt-12">Dr. Veerpratap Meena</h1>
-    <h1 class="text-1xl font-bold mb-1 mt-2">Assistant Professor,</h1>
-    <h1 class="text-1xl font-bold mb-1 mt-2">Department of Electrical Engineering</h1>
-    <h1 class="text-1xl font-bold mb-1 mt-2">National Institute of Technology, Jamshedpur, India</h1>
+  
+  <!-- Main Content -->
+  <main class="container mx-auto p-6">
+    <h1 class="text-4xl font-bold mb-4 mt-40">International Advisory Committee</h1>
+    <p class="mb-6">Meet the distinguished members of our International Advisory Committee who play a key role in shaping the content and structure of the conference.</p>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+        <img src="images/item1.jpg" alt="Committee Member 1" class="w-24 h-24 mx-auto rounded-full mb-3">
+        <h2 class="text-lg font-bold">Dr. John Doe</h2>
+        <p class="text-sm text-gray-600">Professor of Computer Science, XYZ University</p>
+      </div>
+      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+        <img src="images/item2.jpg" alt="Committee Member 2" class="w-24 h-24 mx-auto rounded-full mb-3">
+        <h2 class="text-lg font-bold">Dr. Jane Smith</h2>
+        <p class="text-sm text-gray-600">Lead Researcher, ABC Tech Labs</p>
+      </div>
+      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+        <img src="images/item3.jpg" alt="Committee Member 3" class="w-24 h-24 mx-auto rounded-full mb-3">
+        <h2 class="text-lg font-bold">Dr. Alice Johnson</h2>
+        <p class="text-sm text-gray-600">Director of AI Research, Tech Innovations</p>
+      </div>
+    </div>
   </main>
 
-   <!-- Footer-->
-   <footer class="bg-black text-center py-5">
-    <div class="container px-5">
-        <div class="text-white-50 large">
-            <div class="mb-2">&copy; ICE2CPT-2025. All Rights Reserved.</div>
-            <span class="mx-2">&middot;</span>
-            <a href="./about.html">About Us</a>
-            <span class="mx-2">&middot;</span>
-            <a href="./contact.html">Contact Us</a>
-            <span class="mx-2">&middot;</span>
-            <a href="https://nitjsr.ac.in/" target="_blank" rel="noreferrer nofollow">NITJSR Website</a>
-            <hr>
-            <div class="mb-2">Developed by Electrical Engineering, NIT Jamshedpur</div>
-        </div>
-    </div>
-</footer>
+    <!-- Footer-->
+    <footer class="bg-black text-center py-5">
+      <div class="container px-5">
+          <div class="text-white-50 large">
+              <div class="mb-2">&copy; ICE2CPT-2025. All Rights Reserved.</div>
+              <span class="mx-1">&middot;</span>
+              <a href="./about.html">About Us</a>
+              <span class="mx-1">&middot;</span>
+              <a href="./contact.html">Contact Us</a>
+              <span class="mx-1">&middot;</span>
+              <a href="https://nitjsr.ac.in/" target="_blank" rel="noreferrer nofollow">NITJSR Website</a>
+              <hr>
+              <div class="mb-2">Developed by Electrical Engineering, NIT Jamshedpur</div>
+          </div>
+      </div>
+  </footer>
 
   <script src="js/jquery-1.11.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
@@ -165,5 +172,6 @@
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+
 </body>
 </html>
