--- a/registrationdetails.html
+++ b/registrationdetails.html
@@ -32,7 +32,7 @@
           <img style="height: 45px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
         </a>
         <a target="_blank" href="https://ieeenitjsr.netlify.app/">
-          <img style="height: 45px;" src="images/ieeesys.png" alt="logo" class="mb-1 mx-auto img-fluid" width="200" height="55">
+          <img style="height: 45px;" src="images/nitiee.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="55">
         </a>
         <!-- <a href="index.html">
           <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
@@ -204,9 +204,9 @@
                                   <tr>
                                       <th scope="row">5</th>
                                       <td>Student Attendee (Non- Author) </td>
-                                      <td>₹8000</td>
+                                      <td>₹2500</td>
                                       <td>$200</td>
-                                      <td>₹6000</td>
+                                      <td>₹3500</td>
                                       <td>$150</td>
                                   </tr>
                                   <tr>
