--- a/venue.html
+++ b/venue.html
@@ -29,7 +29,7 @@
             <img style="height: 45px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
           </a>
           <a target="_blank" href="https://ieeenitjsr.netlify.app/">
-            <img style="height: 45px;" src="images/ieeesys.png" alt="logo" class="mb-1 mx-auto img-fluid" width="200" height="55">
+            <img style="height: 45px;" src="images/nitiee.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="55">
           </a>
           <!-- <a href="index.html">
             <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
