--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
     <div class="marquee-content">
       <a href="https://cmt3.research.microsoft.com/ICE2CPT2025">Click Here for Paper Submission</a> 
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-        <a href="CSSF.pdf">Click Here for Speacial Session</a>
+        <a href="CSSF.pdf">Click Here for Special Session Proposal</a>
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-        <a href="SST.docx">Click Here to download Speacial Session Template</a>
+        <a href="SST.docx">Click Here to download Special Session Template</a>
     </div>
 </div>
 
